# pre-init-buffer

./: Cargo.toml
examples/: basic.rs  global_basic.rs  nested.rs
src/: global.rs  lib.rs  main.rs
tests/: multi_thread.rs
