[package]
name = "dispatcher"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
log = "0.4.11"
env_logger = "0.7.1"
thiserror = "1.0.20"
